run tests with jdk 17